# democtp

./: CMakeLists.txt  simnow.ini  test.cpp
ctp/logs/: main_log.txt
flow/tdfile/: Private.con  Public.con
include/: Celue.h  Cunc.h  Fenk.h  MdSpi.h  TdSpi.h  Zhib.h  mainThread.h  myData.h
logs/: main_log.txt  md_log.txt  td_log.txt
somefile/: Instrument.csv  symbol.txt
src/: Celue.cpp  Cunc.cpp  Fenk.cpp  MdSpi.cpp  TdSpi.cpp  Zhib.cpp  mainThread.cpp
